--- a/index.html
+++ b/index.html
@@ -102,13 +102,11 @@
                 this.field('tags');
 
                 proyectos.forEach(function (p) {
-                    // CORRECCIÓN DEFINITIVA: Asegurarse de que TODOS los campos son strings
-                    // para evitar errores con la librería de búsqueda.
                     const docToAdd = {
                         id: p.id || '',
-                        titulo: p.titulo || '',
-                        resumen: p.resumen || '',
-                        contenido_completo: p.contenido_completo || '',
+                        titulo: (p.titulo && p.titulo.es) ? p.titulo.es : '',
+                        resumen: (p.resumen && p.resumen.es) ? p.resumen.es : '',
+                        contenido_completo: (p.contenido_completo && p.contenido_completo.es) ? p.contenido_completo.es : '',
                         tags: (p.tags || []).join(' ')
                     };
                     this.add(docToAdd);
@@ -133,15 +131,13 @@
                     e.currentTarget.querySelector('.card-inner').style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.05)`;
                 });
                 card.addEventListener('mouseleave', e => { e.currentTarget.querySelector('.card-inner').style.transform = 'rotateX(0) rotateY(0) scale(1)'; });
-                card.innerHTML = `<div class="card-inner"><img class="card-hero-image" src="${proyecto.imagen || ''}" alt="${proyecto.titulo}" loading="lazy"><div class="card-content"><h2>${proyecto.titulo}</h2><div class="card-excerpt">${marked.parse(proyecto.resumen || '')}</div><span class="button-imitation">Ver detalles</span></div></div>`;
+                card.innerHTML = `<div class="card-inner"><img class="card-hero-image" src="${proyecto.imagen || ''}" alt="${proyecto.titulo.es}" loading="lazy"><div class="card-content"><h2>${proyecto.titulo.es}</h2><div class="card-excerpt">${marked.parse(proyecto.resumen.es || '')}</div><span class="button-imitation">Ver detalles</span></div></div>`;
                 grid.appendChild(card);
                 
                 const isPreview = (window.self !== window.top);
                 if (isPreview || index < 3) {
-                    // Si estamos en la vista previa O es una de las 3 primeras tarjetas, hazla visible al instante.
                     card.classList.add('is-visible');
                 } else {
-                    // Para el resto, usa el observer para el efecto de scroll.
                     cardObserver.observe(card);
                 }
             });
