--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenido a mi almacén digital. Un portfolio con herramientas, utilidades para Windows, mods y proyectos de juegos creados por alberto64674yt.">
-	<meta name="keywords" content="iLupo, alberto64674yt, portfolio, utilidades, software, mods, gaming">
-	<title>iLupo Warehouse | Portfolio de Proyectos y Utilidades</title>
+	<meta name="keywords" content="iLupo, alberto64674yt, portfolio, utilidades, software, mods, gaming, descargar proyectos">
+	<meta name="author" content="Alberto">
+    <title>iLupo Warehouse | Portfolio de Proyectos y Utilidades</title>
+
+    <meta property="og:title" content="iLupo Warehouse - Portfolio de Alberto">
+    <meta property="og:description" content="Descubre mis utilidades, mods y proyectos de software. Todo gratis y sin publicidad.">
+    <meta property="og:image" content="https://ilupowarehouse.netlify.app/favicon/favicon-96x96.png"> <meta property="og:url" content="https://ilupowarehouse.netlify.app">
+    <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
@@ -522,6 +528,7 @@
 
 </body>
 </html>
+
 
 
 
