--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bienvenido a mi almacén digital. Un portfolio con herramientas, utilidades para Windows, mods y proyectos de juegos creados por alberto64674yt.">
-	<meta name="keywords" content="iLupo, alberto64674yt, portfolio, utilidades, software, mods, gaming, descargar proyectos">
-	<meta name="author" content="Alberto">
-    <title>iLupo Warehouse | Portfolio de Proyectos y Utilidades</title>
+    <title>iLupo Warehouse - Projects & Portfolio / Proyectos y Utilidades</title>
+    <meta name="description" content="Personal development hub & software warehouse. Descarga utilidades, mods y proyectos creados por alberto64674yt. Free & Online.">
+    <meta name="keywords" content="ilupo, portfolio, mods, software, utilities, descargar, proyectos, gaming, json cms, alberto64674yt, tools, download">
+    <meta name="author" content="alberto64674yt">
 
-    <meta property="og:title" content="iLupo Warehouse - Portfolio de Alberto">
-    <meta property="og:description" content="Descubre mis utilidades, mods y proyectos de software. Todo gratis y sin publicidad.">
-    <meta property="og:image" content="https://ilupowarehouse.netlify.app/favicon/favicon-96x96.png"> <meta property="og:url" content="https://ilupowarehouse.netlify.app">
+    <meta name="google-site-verification" content="U_DDzWa6jVYplvqkgRlp7QBgKMxMzIE7DKKs7bRYyY0" />
+
+    <meta property="og:title" content="iLupo Warehouse - Portfolio & Mods">
+    <meta property="og:description" content="Personal project hub. Descarga mis utilidades y software gratis. / Download my tools & mods for free.">
+    <meta property="og:image" content="https://ilupowarehouse.netlify.app/favicon/favicon-96x96.png">
+    <meta property="og:url" content="https://ilupowarehouse.netlify.app">
     <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -528,6 +531,7 @@
 
 </body>
 </html>
+
 
 
 
