--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
     </header>
 
     <div class="filter-controls">
-        <a href="sobre-mi.html" class="about-me-button">Sobre Mí</a>
+        <div class="nav-buttons-container">
+            <a href="sobre-mi.html" class="main-nav-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" /></svg>
+                Sobre Mí
+            </a>
+            <a href="https://github.com/alberto64674yt/iLupo-Warehouse-Sources" target="_blank" class="main-nav-button" title="Repositorio Privado (Solo Admin)">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14.6,16.6L19.2,12L14.6,7.4L16,6L22,12L16,18L14.6,16.6M9.4,16.6L4.8,12L9.4,7.4L8,6L2,12L8,18L9.4,16.6Z" /></svg>
+                Fuentes
+            </a>
+        </div>
         <div class="top-controls">
             <div class="search-container">
                 <input type="text" id="search-box" placeholder="Buscar por nombre...">
@@ -531,6 +540,7 @@
 
 </body>
 </html>
+
 
 
 
