--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
 <body>
-    <header id="main-header" class="no-select">
+    <div id="tsparticles"></div>
+	<header id="main-header" class="no-select">
 		<img id="header-logo" draggable="false" src="/favicon/favicon.svg" alt="Logo de iLupo Warehouse" style="display: block; margin: 0 auto 1.5rem auto; width: 128px; height: 128px; -webkit-user-select: none; -ms-user-select: none; user-select: none;">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle" id="subtitle">
@@ -537,12 +538,73 @@
     });
   }
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.0/tsparticles.bundle.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', async function () {
+        await tsParticles.load("tsparticles", {
+            fullScreen: {
+                enable: true,
+                zIndex: -1
+            },
+            particles: {
+                number: {
+                    value: 50, // CANTIDAD: Si quieres más moléculas, sube este número (ej: 80)
+                    density: {
+                        enable: true,
+                        area: 800
+                    }
+                },
+                color: {
+                    value: "#3b82f6" // COLOR: Aquí puse un azul brillante tipo 'ciencia'. Puedes poner "#ffffff" si las quieres blancas.
+                },
+                shape: {
+                    type: "circle"
+                },
+                opacity: {
+                    value: 0.8, // OPACIDAD: 1 es sólido total, 0.8 es un poco transparente. Antes estaba en 0.3 (muy invisible).
+                    random: false
+                },
+                size: {
+                    value: 6, // TAMAÑO BOLAS: Antes era 3. Ahora son el doble de grandes.
+                    random: true // Esto hace que algunas sean grandes y otras pequeñas (efecto natural)
+                },
+                links: {
+                    enable: true,
+                    distance: 150, // DISTANCIA: Cuanto más alto, más líneas se conectan.
+                    color: "#3b82f6", // COLOR LÍNEAS: Mismo azul que las bolas.
+                    opacity: 0.5, // OPACIDAD LÍNEAS: Sube esto si quieres ver más las conexiones.
+                    width: 2 // GROSOR LÍNEAS: Antes era 1. Ahora son más gorditas.
+                },
+                move: {
+                    enable: true,
+                    speed: 2, // VELOCIDAD: Un poco más rápido para que se note el movimiento.
+                    direction: "none",
+                    random: false,
+                    straight: false,
+                    outModes: "out"
+                }
+            },
+            interactivity: {
+                events: {
+                    onHover: {
+                        enable: true,
+                        mode: "repulse" // El efecto de empujar
+                    },
+                    onClick: {
+                        enable: true,
+                        mode: "push"
+                    }
+                },
+                modes: {
+                    repulse: {
+                        distance: 120, // Radio de empuje del ratón
+                        duration: 0.4
+                    }
+                }
+            },
+            detectRetina: true
+        });
+    });
+</script>
 </body>
 </html>
-
-
-
-
-
-
