--- a/tags.html
+++ b/tags.html
@@ -16,6 +16,7 @@
     <link rel="manifest" href="/favicon/site.webmanifest" />
 </head>
 <body>
+	<div id="tsparticles"></div>
     <header>
         <h1 id="tag-page-title">Proyectos</h1>
         <p class="subtitle"><a href="index.html" class="back-link-header">← Volver a todos los proyectos</a></p>
@@ -107,6 +108,46 @@
     });
   }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.0/tsparticles.bundle.min.js"></script>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', async function () {
+            await tsParticles.load("tsparticles", {
+                fullScreen: { enable: true, zIndex: -1 },
+                particles: {
+                    number: { value: 50, density: { enable: true, area: 800 } },
+                    color: { value: "#3b82f6" },
+                    shape: { type: "circle" },
+                    opacity: { value: 0.8, random: false },
+                    size: { value: 6, random: true },
+                    links: {
+                        enable: true,
+                        distance: 150,
+                        color: "#3b82f6",
+                        opacity: 0.5,
+                        width: 2
+                    },
+                    move: {
+                        enable: true,
+                        speed: 2,
+                        direction: "none",
+                        random: false,
+                        straight: false,
+                        outModes: "out"
+                    }
+                },
+                interactivity: {
+                    events: {
+                        onHover: { enable: true, mode: "repulse" },
+                        onClick: { enable: true, mode: "push" }
+                    },
+                    modes: {
+                        repulse: { distance: 120, duration: 0.4 }
+                    }
+                },
+                detectRetina: true
+            });
+        });
+    </script>
 </body>
 </html>
